syntax = "proto3";

package definition;
option go_package = "github.com/mesg-foundation/core/protobuf/definition";

// Event represents a single event run in engine.
message Event {
  // Hash is a unique hash to identify event.
  string hash = 1;

  // instanceHash is hash of instance that can proceed an execution.
  string instanceHash = 2;

  // key is the key of the event.
  string key = 3;

  // data is the data for the event.
  string data = 4;
}
